# caen-v1720e-frontend

./: .gitignore  CMakeLists.txt  LICENSE  README.md
an-anisotropy/: CMakeLists.txt
an-anisotropy/src/: AnisotropyAnalyzer.cxx
an-basic-wave-form/: CMakeLists.txt
an-basic-wave-form/include/: TAnaManager.hxx
an-basic-wave-form/include/hist/: AbstractWaveform.hxx  V1720Waveform.hxx
an-basic-wave-form/src/: Analyzer.cxx  TAnaManager.cxx
an-basic-wave-form/src/hist/: AbstractWaveform.cxx  V1720Waveform.cxx
an-basic-waveform/: CMakeLists.txt
an-basic-waveform/html/: basic-waveform.html
an-basic-waveform/html/script/: basic-waveform.js  polyfill.js  rootana-utils.js
an-basic-waveform/html/style/: basic-waveform.css
an-basic-waveform/include/: TAnaManager.hxx
an-basic-waveform/resources/: basic-waveform.html
an-basic-waveform/resources/script/: basic-waveform.js  number-utils.js  odb.js  rootana-utils.js
an-basic-waveform/resources/style/: basic-waveform.css  jquery-ui.min.css
an-basic-waveform/src/: Analyzer.cxx  TAnaManager.cxx
analyzer-basic/: CMakeLists.txt
analyzer-basic/src/: analyzer-basic.cxx
analyzer-lib/: CMakeLists.txt
analyzer-lib/include/analyzer/exception/: CommandLineException.hxx  Exception.hxx
analyzer-lib/include/analyzer/hist/: AbstractWaveform.hxx  DigitizerWaveform.hxx  V1720Waveform.hxx  V1724Waveform.hxx
analyzer-lib/include/analyzer/util/: AnalyzerUtils.hxx
analyzer-lib/src/analyzer/exception/: CommandLineException.cxx  Exception.cxx
analyzer-lib/src/analyzer/hist/: AbstractWaveform.cxx  DigitizerWaveform.cxx  V1720Waveform.cxx  V1724Waveform.cxx
analyzer-lib/src/analyzer/util/: AnalyzerUtils.cxx
caen-lib/: CMakeLists.txt
caen-lib/include/caen/: device.hxx  digitizer.hxx  error-holder.hxx  event.hxx  exception.hxx  fe-commons.hxx  handle.hxx  noncopyable.hxx  readout-buffer.hxx  v1720.hxx  v1724.hxx
caen-lib/src/caen/: device.cxx  digitizer.cxx  error-holder.cxx  event.cxx  exception.cxx  fe-commons.cxx  handle.cxx  readout-buffer.cxx
custom-pages/: wave-form-peaks.html
cxx-readout-example/: CMakeLists.txt
cxx-readout-example/src/: main.cxx
doc/: CMakeLists.txt  fe-v1720.tex  fe-v1724.tex  gd-convert.tex  gneis-daq.bib  gneis-daq.tex  r-scripts.tex
doc/src/: fe-v1720.tex  gneis-daq.tex
fe-sinus/: CMakeLists.txt
fe-sinus/include/: defaults.hxx
fe-sinus/src/: fe-sinus.cxx
fe-v1720/: CMakeLists.txt
fe-v1720/include/: defaults.hxx  fe-v1720.hxx
fe-v1720/src/: fe-v1720.cxx  frontend.cxx
fe-v1724/: CMakeLists.txt
fe-v1724/include/: defaults.hxx  fe-v1724.hxx
fe-v1724/src/: fe-v1724.cxx
frontend-util-lib/: CMakeLists.txt
frontend-util-lib/include/frontend/: locker.hxx  types.hxx
frontend-util-lib/src/frontend/: locker.cxx  types.cxx
gd-convert/: CMakeLists.txt
gd-convert/include/: Converter.hxx
gd-convert/include/converter/: Binary.hxx  FilePerRun.hxx  Simple.hxx
gd-convert/src/: Converter.cxx  gd-convert.cxx
gd-convert/src/converter/: Binary.cxx  FilePerRun.cxx  Simple.cxx
math-lib/: CMakeLists.txt
math-lib-test/: CMakeLists.txt
math-lib-test/src/math/: DiffContainerTest.cxx  EdgeFinderTest.cxx  FindEdgeDistanceTest.cxx  IntOpTest.cxx  PeakFinderTest.cxx  StatAccumTest.cxx
math-lib/include/math/: DiffContainer.hxx  EdgeFinder.hxx  IntOp.hxx  PeakFinder.hxx  StatAccum.hxx
math-lib/src/math/: PeakFinder.cxx
midas-util-lib/: CMakeLists.txt
midas-util-lib/include/midas/: exception.hxx  fe-api.hxx  odb.hxx
midas-util-lib/src/midas/: exception.cxx  odb.cxx
r/: CMakeLists.txt
r-packages/gneis.daq/R/: read.events.from.con.R  read.events.from.file.R  read.events.from.gdconvert.R  read.events.from.pipe.R  waveforms.to.timeseries.R
r/scripts/: CMakeLists.txt  stationarity-analysis.R  stationarity-calculate.R
r/scripts/src/: avg-peak-form-calc.R  avg-peak-form-plot.R  avg-peak-form.R  calc-peaks-dist-1d.R  calc-peaks-dist-2d.R  calc-peaks-time-dist.R  calc-peaks-time-distr.R  calc-peaks-time-quantiles.R  calc-peaks.R  channel-peak-calc.R  find-channel-peaks.R  find-peaks.R  install-packages.R  peak-amp-dist-plot.R  peak-stat-plot.R  peak-time-amp-dist-plot.R  peak-time-dist-plot.R  stationarity-analysis.R  stationarity-calculate.R
r/scripts/src/prefission/: det.peaks.amp.time.distr.R  peak-distr.R
readout-example/: CMakeLists.txt
readout-example/src/: frontend.c  main.c
slurm/: CMakeLists.txt
slurm/src/: calc-peaks-dist-1d.sbatch  calc-peaks-dist-2d.sbatch
src/: frontend.c
util-lib/: CMakeLists.txt
util-lib-test/: CMakeLists.txt
util-lib-test/src/util/: TypesTest.cxx  VectorComparatorTest.cxx
util-lib-test/src/util/caen/: V1720InfoRawDataTest.cxx  V1724InfoRawDataTest.cxx
util-lib/include/fe/: Frontend.hxx  SynchronizedFrontend.hxx
util-lib/include/fe/caen/: DigitizerFrontend.hxx
util-lib/include/util/: FrontEndUtils.hxx  SignalInfoRawData.hxx  TDcOffsetRawData.hxx  TInfoRawData.hxx  TWaveFormRawData.hxx  TriggerInfoRawData.hxx  V1720InfoRawData.hxx  V1720WaveForm.hxx  VectorComparator.hxx  types.hxx
util-lib/include/util/caen/: DigitizerInfoRawData.hxx  V1720InfoRawData.hxx  V1724InfoRawData.hxx
util-lib/src/fe/: Frontend.cxx  SynchronizedFrontend.cxx
util-lib/src/fe/caen/: DigitizerFrontend.cxx
util-lib/src/util/: FrontEndUtils.cxx  SignalInfoRawData.cxx  TDcOffsetRawData.cxx  TInfoRawData.cxx  TWaveFormRawData.cxx  TriggerInfoRawData.cxx  V1720InfoRawData.cxx  V1720WaveForm.cxx  VectorComparator.cxx  types.cxx
util-lib/src/util/caen/: DigitizerInfoRawData.cxx  V1720InfoRawData.cxx  V1724InfoRawData.cxx
