cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
project(AnalyzerBasicWaveForm VERSION 1.0.0 LANGUAGES CXX DESCRIPTION "MIDAS Basic Wave Form Analyzer")
set (CMAKE_CXX_STANDARD 14)
set (MIDASLIBDIR $ENV{MIDASSYS}/linux/lib)
include_directories(${PROJECT_SOURCE_DIR}/include/)
include_directories(${PROJECT_SOURCE_DIR}/../fe-v1720/include/)
include_directories($ENV{MIDASSYS}/include)
include_directories($ENV{ROOTSYS}/include)
include_directories($ENV{ROOTANASYS}/include)
link_directories(${MIDASLIBDIR})
link_directories($ENV{ROOTSYS}/lib)
link_directories($ENV{ROOTANASYS}/lib)

file(GLOB_RECURSE SOURCES ${PROJECT_SOURCE_DIR}/src/*.cxx)
file(GLOB_RECURSE HEADERS ${PROJECT_SOURCE_DIR}/include/*.hxx)

add_executable(${PROJECT_NAME} ${SOURCES})
set_target_properties(${PROJECT_NAME} PROPERTIES 
  OUTPUT_NAME an-basic-waveform
  RESOURCE "${RESOURCE_FILES}")
target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -pedantic)
target_link_libraries(${PROJECT_NAME} z)
target_link_libraries(${PROJECT_NAME} pthread)
target_link_libraries(${PROJECT_NAME} rt)
target_link_libraries(${PROJECT_NAME} util)
target_link_libraries(${PROJECT_NAME} Graf)
target_link_libraries(${PROJECT_NAME} rootana)
target_link_libraries(${PROJECT_NAME} Gui)
target_link_libraries(${PROJECT_NAME} Net)
target_link_libraries(${PROJECT_NAME} Hist)
target_link_libraries(${PROJECT_NAME} RIO)
target_link_libraries(${PROJECT_NAME} Thread)
target_link_libraries(${PROJECT_NAME} XMLParser)
target_link_libraries(${PROJECT_NAME} RHTTP)
target_link_libraries(${PROJECT_NAME} Gpad)
target_link_libraries(${PROJECT_NAME} Core)
target_link_libraries(${PROJECT_NAME} AnalyzerLib)
target_link_libraries(${PROJECT_NAME} CaenLib)
target_link_libraries(${PROJECT_NAME} MidasUtilLib)
target_link_libraries(${PROJECT_NAME} UtilLib)
target_link_libraries(${PROJECT_NAME} MathLib)
target_link_libraries(${PROJECT_NAME} midas)

install(TARGETS ${PROJECT_NAME} DESTINATION bin)
install(DIRECTORY resources DESTINATION $ENV{MIDASSYS})
