cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
project(RScripts VERSION 1.0.0 LANGUAGES CXX DESCRIPTION "Slurm scripts")

file(GLOB_RECURSE SOURCES ${PROJECT_SOURCE_DIR}/src/*.sbatch)

if(DEFINED SLURM_SCRIPTS_INSTALL_DIR)
	install(
		FILES ${SOURCES} 
		DESTINATION ${SLURM_SCRIPTS_INSTALL_DIR}
	)
endif(DEFINED SLURM_SCRIPTS_INSTALL_DIR)
